# kimep-big-data-ml-traffic-project

./: README.md  links.txt  main.py  pyproject.toml
models/: xgb_traffic_forecast.json
notebooks/: Untitled.executed.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
outputs/: metrics_overall.csv  metrics_per_junction.csv  test_predictions.csv
src/: extract_notebook_plots.py
