[project]
name = "lateaprilhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "xgboost-cpu>=3.2.0",
]
